@@ -1,14 +1,9 @@
-FROM adoptopenjdk/openjdk14:armv7l-ubuntu-jre-14.0.2_12 as builder
+FROM eclipse-temurin:21-jre@sha256:8cef5fc7bebe421363ab543a2f4db5caf7d119d8db67d56b0f56c485d2de4d55
 
-ARG JAR_FILE=runner/target/*.jar
-COPY ${JAR_FILE} application.jar
-RUN java -Djarmode=layertools -jar application.jar extract
-
-FROM adoptopenjdk/openjdk14:armv7l-ubuntu-jre-14.0.2_12
-COPY --from=builder dependencies/ ./
-COPY --from=builder snapshot-dependencies/ ./
-COPY --from=builder spring-boot-loader/ ./
-COPY --from=builder application/ ./
+ARG JAR_FILE=runner/target/runner-1.0-SNAPSHOT.jar
+WORKDIR /opt/archemides
+COPY --chown=10001:10001 ${JAR_FILE} application.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java","--enable-preview","org.springframework.boot.loader.JarLauncher"]
+USER 10001:10001
+ENTRYPOINT ["java", "-jar", "application.jar"]
